# Movie_Recommendation_System_and_Analysis

./: .gitattributes  .gitignore  README.md  dataset_analysis.ipynb  improved_predictions.py  main.ipynb  pyproject.toml  recommendation_system.py  score_machine_learning.py  score_predictions.ipynb  score_predictions.py  simple_gradient_descent.py
movie_dataset/: crew.csv
