[tool.poetry]
name = "movie-recommendation-system"
version = "0.1.0"
description = ""
authors = ["Simon Gneuß <93795566+Simonstorms@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
